added python growth chart

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -66,6 +66,10 @@
     "* \"Multi paradigm programming language\" 😄\n",
     "\n",
     "\n",
+    "* [The Incredible Growth of Python](https://stackoverflow.blog/2017/09/06/incredible-growth-python/)\n",
+    "\n",
+    "![growth-chart](https://zgab33vy595fw5zq-zippykid.netdna-ssl.com/wp-content/uploads/2017/09/growth_major_languages-1-1400x1200.png)\n",
+    "\n",
     "* No math degree required!!\n",
     "\n",
     "\n",
@@ -883,318 +887,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ron/dev/shopymate/modules/sep\r\n",
-      "├── config\r\n",
-      "│   ├── config.yaml\r\n",
-      "│   ├── light_model_config.yaml\r\n",
-      "│   ├── local_config.yaml\r\n",
-      "│   ├── local_light_model_config.yaml\r\n",
-      "│   ├── logging_config.ini\r\n",
-      "│   └── sep_kd_local.yaml\r\n",
-      "├── Dockerfile\r\n",
-      "├── __init__.py\r\n",
-      "├── README.md\r\n",
-      "├── requirements_extra.txt\r\n",
-      "├── requirements_pypy_extra.txt\r\n",
-      "├── requirements_pypy.txt\r\n",
-      "├── requirements.txt\r\n",
-      "├── resources\r\n",
-      "│   ├── concepts_whitelist.txt\r\n",
-      "│   ├── fuzziness\r\n",
-      "│   │   └── fuzziness_config.yaml\r\n",
-      "│   ├── naming\r\n",
-      "│   │   ├── default.yaml\r\n",
-      "│   │   └── empty.yaml\r\n",
-      "│   └── NLA\r\n",
-      "│       └── trace\r\n",
-      "│           └── default.yaml\r\n",
-      "├── scripts\r\n",
-      "│   ├── compare_interpretations.py\r\n",
-      "│   ├── create_es_index.py\r\n",
-      "│   ├── download_spellcheck_dicts_dev.sh\r\n",
-      "│   ├── populate_es_index.py\r\n",
-      "│   ├── run_sepller.sh\r\n",
-      "│   ├── sep_all.py\r\n",
-      "│   ├── sep_kd_local.sh\r\n",
-      "│   ├── uwsgi_sep.sh\r\n",
-      "│   └── waitress_sep.sh\r\n",
-      "├── sep\r\n",
-      "│   ├── api\r\n",
-      "│   │   ├── app_metrics.py\r\n",
-      "│   │   ├── authentication.py\r\n",
-      "│   │   ├── error_handling.py\r\n",
-      "│   │   ├── global_headers.py\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── log.py\r\n",
-      "│   │   ├── marshalling.py\r\n",
-      "│   │   ├── resources\r\n",
-      "│   │   │   ├── config_resource.py\r\n",
-      "│   │   │   ├── __init__.py\r\n",
-      "│   │   │   ├── listings_resource.py\r\n",
-      "│   │   │   ├── optional_query_rewrite_resource.py\r\n",
-      "│   │   │   ├── override_reload_resource.py\r\n",
-      "│   │   │   ├── override_validation_resource.py\r\n",
-      "│   │   │   ├── queries_resource.py\r\n",
-      "│   │   │   ├── status_resource.py\r\n",
-      "│   │   │   └── tools\r\n",
-      "│   │   │       ├── __init__.py\r\n",
-      "│   │   │       └── mapping\r\n",
-      "│   │   │           ├── categories_resource.py\r\n",
-      "│   │   │           ├── category_details_resource.py\r\n",
-      "│   │   │           ├── __init__.py\r\n",
-      "│   │   │           └── source_field_resource.py\r\n",
-      "│   │   ├── schema\r\n",
-      "│   │   │   ├── __init__.py\r\n",
-      "│   │   │   ├── listings_schema.py\r\n",
-      "│   │   │   ├── queries_schema.py\r\n",
-      "│   │   │   └── taxonomy_schema.py\r\n",
-      "│   │   └── versioning.py\r\n",
-      "│   ├── facets\r\n",
-      "│   │   ├── facet_path_extraction.py\r\n",
-      "│   │   ├── facets_container.py\r\n",
-      "│   │   ├── facets_elements.py\r\n",
-      "│   │   ├── facets_generator.py\r\n",
-      "│   │   ├── facet_value_transformer.py\r\n",
-      "│   │   ├── features_path_to_tql_translator.py\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   └── path_finder.py\r\n",
+      "/home/ron/dev/shopymate/modules/sep/sep/translation/\r\n",
+      "├── bundle_attributes_extractor.py\r\n",
+      "├── bundle_notation.py\r\n",
+      "├── bundle_notation_translator.py\r\n",
+      "├── dialect.py\r\n",
+      "├── fuzziness_provider.py\r\n",
+      "├── generic\r\n",
+      "│   ├── generic_instance_translator.py\r\n",
+      "│   ├── generic_listing_bundle_translator.py\r\n",
+      "│   ├── generic_query_bundle_translator.py\r\n",
+      "│   ├── generic_query_translator.py\r\n",
       "│   ├── __init__.py\r\n",
-      "│   ├── interpretations\r\n",
-      "│   │   ├── concepts_filtering_classifier.py\r\n",
-      "│   │   ├── concepts_taxonomy_repository.py\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── interpretation_classifier.py\r\n",
-      "│   │   ├── interpretation_elements_extractor.py\r\n",
-      "│   │   ├── interpretation_elements.py\r\n",
-      "│   │   ├── interpretation_search_text_extractor.py\r\n",
-      "│   │   └── query_interpreter.py\r\n",
-      "│   ├── listings\r\n",
-      "│   │   ├── c14n_service_registry.py\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── listing_conceptualizer.py\r\n",
-      "│   │   ├── listing.py\r\n",
-      "│   │   ├── mapping_registry.py\r\n",
-      "│   │   └── raw_product_listing_builder.py\r\n",
-      "│   ├── load.py\r\n",
-      "│   ├── overrides\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── override_definition.py\r\n",
-      "│   │   ├── override_schema.py\r\n",
-      "│   │   ├── overrides_manager.py\r\n",
-      "│   │   ├── overrides_repository.py\r\n",
-      "│   │   ├── override_types.py\r\n",
-      "│   │   └── override_validator.py\r\n",
-      "│   ├── resources.py\r\n",
-      "│   ├── run.py\r\n",
-      "│   ├── scripts\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   └── lca\r\n",
-      "│   │       ├── __init__.py\r\n",
-      "│   │       ├── lca_graph.py\r\n",
-      "│   │       ├── solr_categories_retriever_multi_process.py\r\n",
-      "│   │       ├── solr_categories_retriever.py\r\n",
-      "│   │       └── solr_categories_retriever_single_process.py\r\n",
-      "│   ├── taxonomy\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   └── taxonomy.py\r\n",
-      "│   ├── translation\r\n",
-      "│   │   ├── bundle_attributes_extractor.py\r\n",
-      "│   │   ├── bundle_notation.py\r\n",
-      "│   │   ├── bundle_notation_translator.py\r\n",
-      "│   │   ├── dialect.py\r\n",
-      "│   │   ├── fuzziness_provider.py\r\n",
-      "│   │   ├── generic\r\n",
-      "│   │   │   ├── generic_instance_translator.py\r\n",
-      "│   │   │   ├── generic_listing_bundle_translator.py\r\n",
-      "│   │   │   ├── generic_query_bundle_translator.py\r\n",
-      "│   │   │   ├── generic_query_translator.py\r\n",
-      "│   │   │   ├── __init__.py\r\n",
-      "│   │   │   ├── language.py\r\n",
-      "│   │   │   └── naming\r\n",
-      "│   │   │       ├── attribute_naming_transformer.py\r\n",
-      "│   │   │       ├── concept_naming_transformer.py\r\n",
-      "│   │   │       ├── __init__.py\r\n",
-      "│   │   │       ├── named_elements.py\r\n",
-      "│   │   │       ├── named_elements_repository.py\r\n",
-      "│   │   │       ├── naming_aware_translators.py\r\n",
-      "│   │   │       └── operator_lifting_query_transformer.py\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── instance_translator.py\r\n",
-      "│   │   ├── query_bundle_importance_repository.py\r\n",
-      "│   │   ├── query_translator.py\r\n",
-      "│   │   └── unit_canonicalization.py\r\n",
-      "│   └── util\r\n",
-      "│       ├── ab_tests\r\n",
-      "│       │   ├── ab_tester.py\r\n",
-      "│       │   └── __init__.py\r\n",
+      "│   ├── language.py\r\n",
+      "│   └── naming\r\n",
+      "│       ├── attribute_naming_transformer.py\r\n",
+      "│       ├── concept_naming_transformer.py\r\n",
       "│       ├── __init__.py\r\n",
-      "│       ├── log.py\r\n",
-      "│       ├── marshalling.py\r\n",
-      "│       ├── sep_exceptions.py\r\n",
-      "│       ├── serialization.py\r\n",
-      "│       └── versioning.py\r\n",
-      "├── sepller\r\n",
-      "│   ├── config.yaml\r\n",
-      "│   ├── config.yaml.j2\r\n",
-      "│   ├── http_proxy.py\r\n",
-      "│   ├── __init__.py\r\n",
-      "│   ├── local_config.yaml\r\n",
-      "│   ├── log.py\r\n",
-      "│   ├── metrics_export.py\r\n",
-      "│   ├── mocks\r\n",
-      "│   │   ├── __init__.py\r\n",
-      "│   │   ├── mock_http_proxy.py\r\n",
-      "│   │   └── mock_spellcheck_client.py\r\n",
-      "│   ├── proxy_handler.py\r\n",
-      "│   ├── queries_resource.py\r\n",
-      "│   ├── requirements.txt\r\n",
-      "│   ├── run.py\r\n",
-      "│   ├── spellcheck_client.py\r\n",
-      "│   └── test\r\n",
-      "│       └── test_sepller_queries.py\r\n",
-      "├── shared\r\n",
-      "│   ├── ab_tests_globals.py\r\n",
-      "│   └── __init__.py\r\n",
-      "├── sonar-project.properties\r\n",
-      "├── sonar_qube_analysis.sh\r\n",
-      "└── test\r\n",
-      "    ├── __init__.py\r\n",
-      "    ├── integration_tests\r\n",
-      "    │   ├── api_tests\r\n",
-      "    │   │   ├── api_integration_test_case.py\r\n",
-      "    │   │   ├── __init__.py\r\n",
-      "    │   │   ├── listings_integration_test_case.py\r\n",
-      "    │   │   ├── __pycache__\r\n",
-      "    │   │   ├── queries_integration_test_case.py\r\n",
-      "    │   │   ├── run_multiple_listings.py\r\n",
-      "    │   │   ├── test_ab_testing.py\r\n",
-      "    │   │   ├── test_authentication.py\r\n",
-      "    │   │   ├── test_bundle_listings_api.py\r\n",
-      "    │   │   ├── test_concepts_filtering.py\r\n",
-      "    │   │   ├── test_listings_api.py\r\n",
-      "    │   │   ├── test_listings_enforce_images_field.py\r\n",
-      "    │   │   ├── test_listings_error_handling.py\r\n",
-      "    │   │   ├── test_markers.py\r\n",
-      "    │   │   ├── test_multiple_sources.py\r\n",
-      "    │   │   ├── test_overrides.py\r\n",
-      "    │   │   ├── test_queries_api.py\r\n",
-      "    │   │   ├── test_remove_response_fields.py\r\n",
-      "    │   │   └── test_versioning.py\r\n",
-      "    │   ├── __init__.py\r\n",
-      "    │   └── test_data\r\n",
-      "    │       ├── concepts_whitelist\r\n",
-      "    │       │   └── test_concepts_whitelist.txt\r\n",
-      "    │       ├── overrides\r\n",
-      "    │       │   ├── override_listing_empty.json\r\n",
-      "    │       │   ├── override_listing.json\r\n",
-      "    │       │   ├── override_query_empty.json\r\n",
-      "    │       │   └── override_query.json\r\n",
-      "    │       ├── test_bundle_extraction_definitions.yaml\r\n",
-      "    │       ├── test_model.yaml\r\n",
-      "    │       ├── test_source_mapping.yaml\r\n",
-      "    │       └── test_taxonomy_mapping.yaml\r\n",
-      "    ├── regression_tests\r\n",
-      "    │   ├── flipkart\r\n",
-      "    │   │   ├── __init__.py\r\n",
-      "    │   │   ├── __pycache__\r\n",
-      "    │   │   └── test_flipkart_regression.py\r\n",
-      "    │   ├── __init__.py\r\n",
-      "    │   ├── jet\r\n",
-      "    │   │   ├── __init__.py\r\n",
-      "    │   │   ├── __pycache__\r\n",
-      "    │   │   └── test_jet_regressions.py\r\n",
-      "    │   └── naming\r\n",
-      "    │       ├── adult_mens_shirt.yaml\r\n",
-      "    │       ├── adult_womens_shirt.yaml\r\n",
-      "    │       ├── baby_boy_shoes.yaml\r\n",
-      "    │       ├── baby_girl_shoes.yaml\r\n",
-      "    │       ├── __init__.py\r\n",
-      "    │       ├── kid_girls_socks.yaml\r\n",
-      "    │       ├── __pycache__\r\n",
-      "    │       ├── test_naming_regressions.py\r\n",
-      "    │       └── toddler_girl_dress.yaml\r\n",
-      "    ├── requirements_test.txt\r\n",
-      "    ├── system_tests\r\n",
-      "    │   ├── conftest.py\r\n",
-      "    │   ├── __init__.py\r\n",
-      "    │   └── test_light_model.py\r\n",
-      "    ├── tools\r\n",
-      "    │   ├── __init__.py\r\n",
-      "    │   ├── mapping\r\n",
-      "    │   │   ├── __init__.py\r\n",
-      "    │   │   ├── mapping_test_case.py\r\n",
-      "    │   │   ├── test_categories_api.py\r\n",
-      "    │   │   ├── test_category_details_api.py\r\n",
-      "    │   │   └── test_source_field_api.py\r\n",
-      "    │   └── test_data\r\n",
-      "    │       ├── category\r\n",
-      "    │       │   ├── another_source_mapping.yaml\r\n",
-      "    │       │   ├── default_source_mapping.yaml\r\n",
-      "    │       │   └── test_model.yaml\r\n",
-      "    │       └── field\r\n",
-      "    │           ├── another_source_mapping.yaml\r\n",
-      "    │           ├── default_source_mapping.yaml\r\n",
-      "    │           └── test_model.yaml\r\n",
-      "    └── unit_tests\r\n",
-      "        ├── facets\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   ├── test_facet_path_extraction.py\r\n",
-      "        │   ├── test_features_path_to_tql_translation.py\r\n",
-      "        │   └── test_tql_to_features_path_translation.py\r\n",
-      "        ├── __init__.py\r\n",
-      "        ├── interpretations\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   ├── __pycache__\r\n",
-      "        │   ├── test_interpretation_elements_extractor.py\r\n",
-      "        │   ├── test_query_interpreter.py\r\n",
-      "        │   └── test_search_text_extractor.py\r\n",
-      "        ├── lca\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   └── lca_tests.py\r\n",
-      "        ├── listings\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   ├── __pycache__\r\n",
-      "        │   ├── test_building_raw_product_listing.py\r\n",
-      "        │   └── test_listing_conceptualizer.py\r\n",
-      "        ├── naming\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   ├── __pycache__\r\n",
-      "        │   ├── test_attribute_naming_instance_transformer.py\r\n",
-      "        │   ├── test_attribute_naming_query_transformer.py\r\n",
-      "        │   └── test_operator_lifting_transformer.py\r\n",
-      "        ├── translation\r\n",
-      "        │   ├── __init__.py\r\n",
-      "        │   ├── instance\r\n",
-      "        │   │   ├── __init__.py\r\n",
-      "        │   │   ├── test_generic_instance_translator.py\r\n",
-      "        │   │   └── test_generic_listing_bundle_translator.py\r\n",
-      "        │   ├── __pycache__\r\n",
-      "        │   ├── query\r\n",
-      "        │   │   ├── __init__.py\r\n",
-      "        │   │   ├── test_generic_query_bundle_translator.py\r\n",
-      "        │   │   └── test_generic_query_translator.py\r\n",
-      "        │   ├── test_bundle_attribute_extractor.py\r\n",
-      "        │   ├── test_bundle_notation_translator.py\r\n",
-      "        │   └── translation_tests_utils.py\r\n",
-      "        └── util\r\n",
-      "            ├── ab_tests\r\n",
-      "            │   ├── __init__.py\r\n",
-      "            │   └── test_ab_tests.py\r\n",
-      "            └── __init__.py\r\n",
+      "│       ├── named_elements.py\r\n",
+      "│       ├── named_elements_repository.py\r\n",
+      "│       ├── naming_aware_translators.py\r\n",
+      "│       └── operator_lifting_query_transformer.py\r\n",
+      "├── __init__.py\r\n",
+      "├── instance_translator.py\r\n",
+      "├── query_bundle_importance_repository.py\r\n",
+      "├── query_translator.py\r\n",
+      "└── unit_canonicalization.py\r\n",
       "\r\n",
-      "64 directories, 233 files\r\n"
+      "2 directories, 23 files\r\n"
      ]
     }
    ],
    "source": [
-    "! tree /home/ron/dev/shopymate/modules/sep"
+    "! tree /home/ron/dev/shopymate/modules/sep/sep/translation/"
    ]
   },
   {
